compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___wrong_callback_arity.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 257
expression: "\nlet x = fn(f) { \"Hello, \" ++ f() }\nuse _ <- x()\n\"Giacomo!\"\n"
---
----- SOURCE CODE

let x = fn(f) { "Hello, " ++ f() }
use _ <- x()
"Giacomo!"


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:3:5
  │
3 │ use _ <- x()
  │     ^    ^^^
  │     │     
  │     Expected no arguments, got 1

This function takes a callback that expects no arguments. But 1 was
provided on the left hand side of `<-`.

See: https://tour.rakun.run/advanced-features/use/
